<resources>
    <string name="app_name">Hotels</string>

    <string name="menu_ordered_list">訂單列表</string>
    <string name="menu_search_available">查詢可訂旅館</string>
    <string name="menu_new_order">住宿預訂</string>
    <string name="menu_order">訂單</string>
    <string name="menu_cancel_order">取消訂單</string>
    <string name="menu_modify_order">修改訂單</string>
    <string name="menu_search_order">查詢訂單</string>
    <string name="check_in_date">入住日期</string>
    <string name="check_out_date">退房日期</string>
    <string name="number_of_people">入住人數</string>
    <string name="number_of_room">客房數量（不需要則需入0）</string>
    <string name="accept">確認</string>
    <string name="total_price">總價</string>
    <string name="type_of_room">房間型號</string>
    <string name="date_type">YYYY-MM-DD</string>
    <string name="search">查詢</string>
    <string name="sure">確認</string>
    <string name="order">預定</string>
    <string name="modify">修改</string>
    <string name="cancel">取消</string>
    <string name="user_id">使用者ID</string>
    <string name="hotel_id">旅館編號</string>
    <string name="order_id">訂位代號</string>
    <string name="room_type">房間種類與數量</string>
    <string name="single">單人房</string>
    <string name="dual">雙人房</string>
    <string name="quad">四人房</string>
    <string name="success_cancel_order">成功取消訂單</string>
    <string name="failed_cancel_order">失敗：資料不存在</string>
    <string name="failed_hotel_id">失敗：旅館編號不存在</string>
    <string name="failed_order_room">失敗：房間數不足</string>
    <string name="modify_order_room">修改房間數</string>
    <string name="modify_order_date">修改住宿日期</string>
    <string name="failed_modify_order_room_too_many">修改失敗：修改數量超過訂房數量</string>
    <string name="failed_modify_order_id_not_exist">修改失敗：此訂位代號不存在</string>
    <string name="failed_modify_order_date_longer">修改失敗：只能縮短日期，不能延長</string>
    <string name="failed_search_order">您輸入的身份識別碼/訂位代號有誤，請重新輸入</string>

    <!-- Title text for the empty view, which describes the empty dog house image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">It\'s a bit lonely here...</string>

    <!-- Subtitle text for the empty view that prompts the user to add a pet [CHAR LIMIT=50] -->
    <string name="invalid_number_format">失敗：數字格式錯誤</string>
    <string name="invalid_userID_format">失敗：使用者ID格式錯誤</string>
    <string name="invalid_hotelID_format">失敗：旅館ID格式錯誤</string>
    <string name="invalid_orderID_format">失敗：訂單ID格式錯誤</string>
    <string name="invalid_single_format">失敗：單人房數量格式錯誤</string>
    <string name="invalid_dual_format">失敗：雙人房數量格式錯誤</string>
    <string name="invalid_quad_format">失敗：四人房數量格式錯誤</string>
    <string name="invalid_date_format">失敗：日期格式錯誤</string>
    <string name="invalid_date_range">失敗：至少需入住一天</string>
    <string name="invalid_check_in_date_format">失敗：入住日期格式錯誤</string>
    <string name="invalid_check_out_date_format">失敗：退房日期格式錯誤</string>
    <string name="success_modify_order">成功修改訂單</string>
    <string name="star">星級</string>
    <string name="search_result">查詢結果</string>
    <string name="invalid_room_numbers">失敗：房間數總合要大於一</string>
    <string name="no_available_rooms">查無結果</string>
</resources>
