<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/cancel_order"
        style="@style/CategoryStyle"
        android:text="@string/menu_cancel_order" />

    <TextView
        android:id="@+id/modify_order"
        style="@style/CategoryStyle"
        android:text="@string/menu_modify_order" />

    <TextView
        android:id="@+id/new_order"
        style="@style/CategoryStyle"
        android:text="@string/menu_new_order" />

    <TextView
        android:id="@+id/search_available"
        style="@style/CategoryStyle"
        android:text="@string/menu_search_available" />
    <TextView
        android:id="@+id/search_order"
        style="@style/CategoryStyle"
        android:text="@string/menu_search_order" />

</LinearLayout>