<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <TextView
            style="@style/TextAboveInputField"
            android:text="@string/user_id"/>
        <EditText
            android:id="@+id/modify_order_date_user_id"
            style="@style/InputField"
            android:inputType="number"/>

        <TextView
            style="@style/TextAboveInputField"
            android:text="@string/order_id"/>
        <EditText
            android:id="@+id/modify_order_date_order_id"
            style="@style/InputField"
            android:inputType="number"/>

        <TextView
            style="@style/TextAboveInputField"
            android:text="@string/check_in_date"/>
        <EditText
            android:id="@+id/modify_order_date_check_in_date"
            style="@style/InputField"
            android:hint="@string/date_type"
            android:inputType="date"/>

        <TextView
            style="@style/TextAboveInputField"
            android:text="@string/check_out_date"/>
        <EditText
            android:id="@+id/modify_order_date_check_out_date"
            style="@style/InputField"
            android:hint="@string/date_type"
            android:inputType="date"/>

        <Button
            android:id="@+id/modify_order_date_button"
            style="@style/ButtonBottom"
            android:text="@string/modify"/>
    </LinearLayout>
</ScrollView>