<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <TextView
            style="@style/TextAboveInputField"
            android:text="@string/check_in_date"/>
        <EditText
            android:id="@+id/search_available_check_in_date"
            style="@style/InputField"
            android:hint="@string/date_type"
            android:inputType="date"/>

        <TextView
            style="@style/TextAboveInputField"
            android:text="@string/check_out_date"/>
        <EditText
            android:id="@+id/search_available_check_out_date"
            style="@style/InputField"
            android:hint="@string/date_type"
            android:inputType="date"/>

        <TextView
            style="@style/TextAboveInputField"
            android:text="@string/number_of_people"/>
        <EditText
            android:id="@+id/search_available_number_of_people"
            style="@style/InputField"
            android:inputType="number"/>

        <TextView
            style="@style/TextAboveInputField"
            android:text="@string/number_of_room"/>
        <EditText
            android:id="@+id/search_available_number_of_room"
            style="@style/InputField"
            android:inputType="number"/>

        <Button
            android:id="@+id/modify_order_button"
            style="@style/ButtonBottom"
            android:text="@string/modify"/>

    </LinearLayout>

</ScrollView>