<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <TextView
            style="@style/TextAboveInputField"
            android:text="@string/user_id"/>
        <EditText
            android:id="@+id/cancel_order_user_id"
            style="@style/InputField"
            android:inputType="number"/>

        <TextView
            style="@style/TextAboveInputField"
            android:text="@string/order_id"/>
        <EditText
            android:id="@+id/cancel_order_order_id"
            style="@style/InputField"
            android:inputType="number"/>

        <Button
            android:id="@+id/modify_order_button"
            style="@style/ButtonBottom"
            android:text="@string/modify"/>

    </LinearLayout>

</RelativeLayout>