<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_margin="16dp"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical">
        <TextView
            style="@style/TextAboveInputField"
            android:text="@string/order_id"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#2B3D4D"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:id="@+id/new_order_list_order_id"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#2B3D4D"/>
        <TextView
            style="@style/TextAboveInputField"
            android:text="@string/user_id"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#2B3D4D"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:id="@+id/new_order_list_user_id"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#2B3D4D"/>

        <TextView
            style="@style/TextAboveInputField"
            android:text="@string/hotel_id"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#2B3D4D"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:id="@+id/new_order_list_hotel_id"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#2B3D4D"/>

        <TextView
            style="@style/TextAboveInputField"
            android:text="@string/check_in_date"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#2B3D4D"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:id="@+id/new_order_list_check_in_date"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#2B3D4D"/>

        <TextView
            style="@style/TextAboveInputField"
            android:text="@string/check_out_date"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#2B3D4D"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:id="@+id/new_order_list_check_out_date"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#2B3D4D"/>
        <TextView
            style="@style/TextAboveInputField"
            android:text="@string/room_type"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#2B3D4D"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/single"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="#2B3D4D"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:id="@+id/new_order_list_number_of_single"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="#2B3D4D"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/dual"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="#2B3D4D"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:id="@+id/new_order_list_number_of_dual"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="#2B3D4D"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/quad"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="#2B3D4D"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:id="@+id/new_order_list_number_of_quad"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="#2B3D4D"/>
        </LinearLayout>
        <TextView
            style="@style/TextAboveInputField"
            android:text="@string/total_price"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#2B3D4D"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:id="@+id/new_order_list_total_price"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#2B3D4D"/>
    </LinearLayout>

</ScrollView>